What is an EAPI

--- a/EAPI.mw
+++ b/EAPI.mw
@@ -1,15 +1,3 @@
-'''EAPI''' is [[Article description::a version defined in [[Ebuild|ebuilds]] and other package manager related files which informs the package manager about the file syntax and content.]]
+'''EAPI is a version defined in [[Ebuild|ebuilds]] and other package manager related files which inform the package manager about the file syntax and content. It is, in effect, the version of the package manager specification ([[PMS]]) that the file adheres to.'''
 
-The EAPI versions (and their meaning) are defined in the [[Package Manager Specification]] (PMS). Currently, EAPIs 0 through 7 are defined and officially supported. In the main Gentoo repository, EAPIs 0 to 4 are banned for new ebuilds, while 5 has been deprecated.
-
-== See also ==
-
-* {{See also|Future EAPI}}
-
-== External resources ==
-
-* [https://devmanual.gentoo.org/ebuild-writing/eapi/ EAPI Usage and Description] (Gentoo Development Guide)
-* [https://blogs.gentoo.org/mgorny/2018/05/03/the-ultimate-guide-to-eapi-7/ Michał Górny - The ultimate guide to EAPI 7]
-
-
-[[Category:Portage]]
+The EAPI versions (and their meaning) are defined in the [http://www.gentoo.org/proj/en/qa/pms.xml Package Manager Specification]. Currently, EAPIs 0 till 4 are defined.
