--- a/Package_Manager_Specification.mw
+++ b/Package_Manager_Specification.mw
@@ -1,50 +1,5 @@
-{{InfoBox stack
-|{{InfoBox project|Package Manager Specification|header=true}}
-}}
+'''The Package Manager Specification is a community-driven standardization effort to ensure that the [[Ebuild|ebuild]] file format, the ebuild repository format (of which the portage tree is Gentoo's main incarnation) as well as behavior of the package managers interacting with these ebuilds is properly written down and agreed upon.'''
 
-The '''Package Manager Specification (PMS)''' is [[Article description::a standardization effort to ensure that the [[Ebuild|ebuild]] file format, the ebuild repository format (of which the Gentoo ebuild repository is the main incarnation), as well as behavior of the package managers interacting with these ebuilds is properly agreed upon and documented.]]
+By defining the ebuild format and package managers behavior, it is possible for software developers to create other package managers next to Portage that are fully compatible with the ebuilds and as such can be used on Gentoo (and related) distributions.
 
-By defining the ebuild format and package managers behavior, it is possible for software developers to create other package managers next to Portage that are fully compatible with the ebuilds and can be used on Gentoo (and related) distributions.
-
-For more information, see Gentoo's [[Project:Package Manager Specification|Package Manager Specification project]].
-
-== Council approved specifications ==
-
-{| class="table table-striped table-condensed"
-|-
-! scope="col" width="15%" | EAPI version
-! scope="col" width="20%" | Approval date
-! Links
-|-
-| 2 || 2008-09-25 || [https://projects.gentoo.org/pms/2/pms.pdf PDF]
-|-
-| 3 || 2010-01-18 || [https://projects.gentoo.org/pms/3/pms.pdf PDF] - [https://projects.gentoo.org/pms/3/pms.html HTML]
-|-
-| 4 || 2011-01-17  || [https://projects.gentoo.org/pms/4/pms.pdf PDF] - [https://projects.gentoo.org/pms/4/pms.html HTML]
-|-
-| 5 || 2012-09-20  || [https://projects.gentoo.org/pms/5/pms.pdf PDF] - [https://projects.gentoo.org/pms/5/pms.html HTML]
-|-
-| 6 || 2015-11-13  || [https://projects.gentoo.org/pms/6/pms.pdf PDF] - [https://projects.gentoo.org/pms/6/pms.html HTML]
-|-
-| 7 || 2018-04-30  || [https://projects.gentoo.org/pms/7/pms.pdf PDF] - [https://projects.gentoo.org/pms/7/pms.html HTML]
-|-
-|}
-
-== Latest specification ==
-
-{| class="table table-striped table-condensed"
-|-
-! scope="col" width="15%" | EAPI version
-! scope="col" width="20%" | Approval date
-! Links
-|-
-| Latest || N/A (work in progress) || [https://dev.gentoo.org/~ulm/pms/head/pms.pdf PDF] - [https://dev.gentoo.org/~ulm/pms/head/pms.html HTML] - [https://dev.gentoo.org/~ulm/pms/head/eapi-cheatsheet.pdf Cheat sheet]
-|-
-|}
-
-== See also ==
-
-* {{See also|EAPI}}
-* {{See also|Future EAPI}}
-
-[[Category:Portage]]
+For more information, see Gentoo's [http://www.gentoo.org/proj/en/qa/pms.xml Package Manager Specification project].
