--- a/CONFIG_PROTECT.mw
+++ b/CONFIG_PROTECT.mw
@@ -1,19 +1,6 @@
-<noinclude>{{DISPLAYTITLE:CONFIG_PROTECT}}<languages /></noinclude>
-<!-- This page is transcluded, please keep the "summary paragraphs" "example" "more information" structure in place.
-When extending further, use the noinclude and includeonly options instead. -->
-<translate>
+{{DISPLAYTITLE:CONFIG_PROTECT}}
+'''The CONFIG_PROTECT variable contains a space-delimited list of directories where Portage will not blindly copy over new versions of files, but instead treat the files as configuration files where the user should manually check if the changes are needed and valid or not.'''
 
-<!--T:1-->
-The <var>CONFIG_PROTECT</var> variable [[Article description::contains a space-delimited list of directories where Portage will not blindly copy over new versions of files]], but instead treat the files as configuration files where the user should manually check if the changes are needed and valid or not. Sub-directories of the listed directories can be excluded through the <var>CONFIG_PROTECT_MASK</var> variable.
+The CONFIG_PROTECT variable is managed by Portage and contains entries from the users' profile, system environment (which is often used by applications that update the variable through their /etc/env.d file) and the users' /etc/make.conf setting.
 
-<!--T:2-->
-The variable has a sane default setting handled by the Portage installation and the users' Gentoo [[Profile (Portage)|profile]]. It can be extended through the system environment (which is often used by applications that update the variable through their {{Path|/etc/env.d}} file) and the users' {{Path|[[:/etc/portage/make.conf]]}} setting.
-
-<!--T:4-->
-{{FileBox|filename=/etc/portage/make.conf|title=Example <var>CONFIG_PROTECT</var> definitions|lang=bash|1=
-CONFIG_PROTECT="/var/bind"
-}}
-
-<!--T:3-->
-See also the [[Handbook:AMD64/Working/EnvVar|Environment variables]] chapter in the Gentoo Handbook.
-</translate><noinclude>[[Category:Portage]]</noinclude>
+For more information, see [http://www.gentoo.org/doc/en/handbook/handbook-x86.xml?part=3&chap=2#doc_chap3 Configuration File Protect] in the Gentoo Handbook.
