--- a/FEATURES.mw
+++ b/FEATURES.mw
@@ -1,32 +1,5 @@
-<noinclude><languages/></noinclude>
-<!-- Transcluded article, keep summary/example/more info structure in place please for transclusion -->
-<translate><!--T:1-->
-<onlyinclude>
-The <var>FEATURES</var> variable contains a list of Portage features that the user wants enabled on the system, effectively influencing Portage's behavior. It is set by default via the Gentoo [[Profile (Portage)|profile]], but can be easily updated through {{Path|[[:/etc/portage/make.conf]]}}. Since this is an incremental variable, <var>FEATURES</var> values can be added without directly overriding the ones implemented through the Gentoo profile.
+'''The FEATURES variable contains a list of Portage features that the user wants enabled on his system, effectively setting Portage behavior.'''
 
-<!--T:2-->
-{{FileBox|filename=/etc/portage/make.conf|title=Adding keepwork to FEATURES in Portage|lang=bash|1=
-FEATURES="keepwork"
-}}</onlyinclude>
+The FEATURES variable is by default already set by the users' profile, but can be updated through /etc/make.conf.
 
-<!--T:6-->
-{{c|[[portageq]]}} can be used to show the active features:
-
-<!--T:7-->
-{{Cmd|portageq envvar FEATURES {{!}} xargs -n 1}}
-
-<!--T:3-->
-<onlyinclude><includeonly>
-For more information, please see [[Handbook:AMD64/Working/Features|Portage features]] in the Gentoo Handbook and the [[FEATURES]] article. For a complete list of available features, see {{c|man 5 make.conf}}.</includeonly></onlyinclude>
-
-== See also == <!--T:8-->
-
-<!--T:9-->
-* [[Handbook:AMD64/Working/Features]]
-
-== External resources == <!--T:4-->
-
-<!--T:5-->
-* [https://devmanual.gentoo.org/general-concepts/features/ FEATURES] in the Gentoo developer manual
-</translate>
-[[Category:Portage]]
+For more information, please see [http://www.gentoo.org/doc/en/handbook/handbook-x86.xml?part=2&chap=3 Portage Features] in the Gentoo Handbook.
