Created page with "'''The world file, by default located in /var/lib/portage/world, contains the set of package atoms that the user has directly asked to have installed.'''  It is the world file, t..."

--- a/World_set_(Portage).mw
+++ b/World_set_(Portage).mw
@@ -1,14 +1,3 @@
-{{Confused|World file (Portage)}}
-The '''world set''', also referred to as '''@world''', [[Article description::encompasses the [[System set (Portage)|''system set'']] and the [[Selected set (Portage)|''selected set'']].]]
+'''The world file, by default located in /var/lib/portage/world, contains the set of package atoms that the user has directly asked to have installed.'''
 
-Later, when a world update is requested (through {{c|emerge -uDN @world}} or similar command), Portage will use the world set as the base for its update calculations.
-
-== See also ==
-
-* {{See also|System set (Portage)}}
-* {{See also|Selected set (Portage)}}
-* {{See also|Selected-packages_set_(Portage)}}
-* [[:/etc/portage/sets]]
-* [[Knowledge_Base:Remove_orphaned_packages#Analysis|Knowledge Base: Remove orphaned packages]] - The process of finding orphaned dependencies explained.
-
-[[Category:Portage]]
+It is the world file, together with the profile, /etc/make.conf and /etc/portage settings that defines which software is installed on the system. Whenever a user triggers a software installation (through '''emerge <packagename>''') this software package name is registered in the world file. Later, when a world update is requested (through '''emerge -uDN world''' or similar) Portage will use this file as the base for its update calculations.
