--- a/DISTDIR.mw
+++ b/DISTDIR.mw
@@ -1,28 +1,5 @@
-<languages />
-<!-- Please keep summary/example/more info approach in the onlyinclude for transclusion -->
-<translate>
-<!--T:1-->
-<onlyinclude>The <var>DISTDIR</var> variable <noinclude>[[Article description::</noinclude>defines the location where Portage will store the downloaded source code archives<noinclude>.]]</noinclude> Its value defaults to {{Path|[[:/var/cache/distfiles]]}} on new installations. Previously, the default was {{Path|/usr/portage/distfiles}}.
+'''The DISTDIR variable defines the location where Portage will store the downloaded source code archives. It defaults to /usr/portage/distfiles'''
 
-<!--T:2-->
-</onlyinclude>This location, which is also often referred to as the ''distfiles'' location, will host the source code archives of all software installed (or attempted to install) on the system. This location is not automatically cleaned up, so users should consider using tools such as the {{c|eclean-dist}} command (which comes as part of the {{Package|app-portage/gentoolkit}} package) to keep the storage used by this location under control. Read the [[Eclean|Eclean article]] for more details.
+This location, which is also often referred to as the ''distfiles'' location, will host the source code archives of all software ever installed (or attempted to install) on the system. This location is not automatically cleaned up though, so you might want to use tools such as '''eclean-dist''' (part of {{Package|app-portage/gentoolkit}}) to keep the storage used by this location under control.
 
-<!--T:3-->
-<onlyinclude>Users can set the <var>DISTDIR</var> variable in [[:/etc/portage/make.conf|{{Path|/etc/portage/make.conf}}]]:
-
-<!--T:6-->
-{{FileBox|filename=/etc/portage/make.conf|title=Using a different DISTDIR location|lang=bash|1=
-DISTDIR=/var/gentoo/distfiles
-}}<includeonly>
-
-<!--T:7-->
-For more information, please refer to the [[DISTDIR]] article.</includeonly></onlyinclude>
-
-== See also == <!--T:4-->
-
-<!--T:5-->
-* [[Knowledge Base:Remove obsoleted distfiles|Knowledge Base: Remove obsoleted distfiles]]
-* {{See also|Eclean}}
-
-</translate>
-[[Category:Portage]]
+Users can set this variable in <code>/etc/make.conf</code>.
