--- a/Benchmarking.mw
+++ b/Benchmarking.mw
@@ -1,158 +1,25 @@
-This article [[Article description::describes various methods of system benchmarking on Linux. It covers CPUs, power usage, RAM, and graphics.]]
-
-== Power usage ==
-
-{{package|sys-power/powertop}} can guess the computer's current power usage in watts.
-
-{{RootCmd|powertop -d {{!}} grep usage|output=<pre>
-Power usage (ACPI estimate): 15.7W (0.5 hours)
-</pre>}}
-
-== CPU ==
-
-=== time ===
-
-{{RootCmd|time emerge -1 coreutils|output=<pre>
-real	2m33.483s
-user	2m6.310s
-sys	0m55.257s
-</pre>}}
-
-== RAM ==
-
-=== ramspeed ===
-
-{{Cmd|ramspeed -b1 -m4 {{!}} grep 4096 && ramspeed -b2 -m4 {{!}} grep 4096|output=<pre>
-INTEGER & WRITING      4096 Kb block: 1948.94 MB/s
-INTEGER & READING      4096 Kb block: 5208.66 MB/s
-</pre>}}
-
-== Hard drive ==
-
-=== hdparm ===
-
-{{RootCmd|hdparm -tT /dev/sda|output=<pre>
-/dev/sda:
- Timing cached reads:   1076 MB in  2.00 seconds = 538.08 MB/sec
- Timing buffered disk reads: 242 MB in  3.01 seconds =  80.32 MB/sec
-</pre>}}
-
-=== time ===
-
-{{Cmd|time bzip2 -c patch-3.3 > patch-3.3.bz2|output=<pre>
-real	0m13.272s
-user	0m7.606s
-sys	0m0.054s
-</pre>}}
-
-{{Cmd|time eix search|output=<pre>
-<snip>
-
-real	0m0.363s
-user	0m0.066s
-sys	0m0.008s
-</pre>}}
-
 == OpenGL ==
 
-=== Warsow(Outdated information) ===
-{{Dated|section}}
-Warsow is great game and decent openGL benchmark. Its based to Qfusion engine which supports Normal Mapping, GLSL shaders (including bump mapping and cel shading) and much more.
-
-==== Install ====
-{{Note|The game package is no longer available}}
-<del>{{Emerge|games-fps/warsow}}</del>
-
-==== Configure for benchmarking ====
-
-Start warsow to create {{Path|~/.warsow-1.0}} directory.
-
-{{Cmd|warsow}}
-
-==== Install benchmark demo. ====
-
-{{Cmd|cd ~/.warsow-1.0}}
-{{Cmd|mkdir basewsw/demos}}
-{{Cmd|wget http://www.phoronix-test-suite.com/benchmark-files/pts-warsow-10-1.zip}}
-{{Cmd|unzip pts-warsow-10-1.zip}}
-{{Cmd|mv pts-demo10.wd15 basewsw/demos/}}
-
-==== Benchmark ====
-
-{{Cmd|warsow +exec profiles/high+.cfg +timedemo 1 +cg_showFPS 1 +cl_maxfps 999 +cl_checkForUpdate 0 +demo pts-demo10 +next "quit" +r_mode -1|output=<pre>
-899 frames, 76.4 seconds: 11.8 fps
-</pre>}}
-
-The possible profiles are high+, high, medium, low, ultralow.
-
 === Nexuiz ===
-
 ==== Install ====
-
-{{Emerge|games-fps/nexuiz}}
+{{emerge|games-fps/nexuiz}}
 
 ==== Reset default options ====
-
 If you have played nexuiz you should reset to default options for canonical benchmark results.
-
-{{Cmd|rm -r ~/.nexuiz/}}
+{{cmd|rm -r ~/.nexuiz/}}
 
 ==== Benchmark ====
-
-{{Cmd|nexuiz-glx -benchmark demos/demo1 -nosound 2>&1 {{!}} egrep -e '[0-9]+ frames'|output=<pre>
-1910 frames 42.0330749 seconds 45.4404063 fps, one-second fps min/avg/max: 35 46 63 (90 seconds)
-</pre>}}
+{{Cmd|nexuiz-glx -benchmark demos/demo1 -nosound 2>&1 <nowiki>|</nowiki> egrep -e '[0-9]+ frames'
+|output=1910 frames 42.0330749 seconds 45.4404063 fps, one-second fps min/avg/max: 35 46 63 (90 seconds)}}
 
 === Xonotic ===
-
 ==== Install ====
-
-{{Emerge|games-fps/xonotic}}
+{{emerge|games-fps/xonotic}}
 
 ==== Reset ====
-
-If you have played Xonotic you should reset to default options for canonical benchmark results.
-
-{{Cmd|rm -r ~/.xonotic/}}
+If you have played xonotic you should reset to default options for canonical benchmark results.
+{{cmd|rm -r ~/.xonotic/}}
 
 ==== Benchmark ====
-
-{{Cmd|xonotic-glx -benchmark demos/the-big-keybench 2>&1 {{!}} egrep -e '[0-9]+ frames'
-|output=<pre>
-12568 frames 556.0637400 seconds 22.6017255 fps, one-second fps min/avg/max: 19 23 27 (207 seconds)
-</pre>}}
-
-=== OpenGL (ES) 2.0 benchmark (glmark2)(Outdated information) ===
-{{Dated|section}}
-==== Install ====
-
-{{RootCmd|layman -a x11}}
-
-{{Note|The glmark2 package no longer builds}}
-
-<del>{{Emerge|app-benchmarks/glmark2}}</del>
-
-<del>Now select benchmarking profile by running glmark2 or glmark2-drm, glmark2-es2, glmark2-es2-drm. For wayland you can run glmark2-es2-wayland or glmark2-wayland.</del>
-
-<del>{{Cmd|glmark2-*}}</del>
-
-=== glxgears ===
-
-{{Note|glxgears is a very basic OpenGL support test, it is not a real benchmark tool!}}
-
-Obtain {{c|glxgears}} by emerging {{Package|x11-apps/mesa-progs}}.
-
-{{Cmd|vblank_mode{{=}}0 glxgears & sleep 15 ; killall glxgears|output=<pre>
-5762 frames in 5.0 seconds = 1152.369 FPS
-5806 frames in 5.0 seconds = 1161.017 FPS
-</pre>}}
-
-== See also ==
-
-* {{See also|PowerTOP}}
-
-== External resources ==
-
-* http://lbs.sourceforge.net/ - A SourceForge site dedicated to listing benchmark utilities for Linux.
-
-[[Category:Benchmarking]]
+{{cmd|xonotic-glx -benchmark demos/the-big-keybench 2>&1 <nowiki>|</nowiki> egrep -e '[0-9]+ frames'
+|output=12568 frames 556.0637400 seconds 22.6017255 fps, one-second fps min/avg/max: 19 23 27 (207 seconds)}}
