Created page with "'''The system set contains the software packages that are required for a standard Gentoo Linux installation.'''  The system packages are defined by the Gentoo profiles (through t..."

--- a/System_set_(Portage).mw
+++ b/System_set_(Portage).mw
@@ -1,24 +1,7 @@
-The '''system set''', also referred to as '''@system''' in Portage development, [[Article description::contains the software packages required for a standard Gentoo Linux installation to run properly.]]
+'''The system set contains the software packages that are required for a standard Gentoo Linux installation.'''
 
-The system packages are defined by the Gentoo [[Profile (Portage)|profile]]s (through the {{Path|packages}} files). An end-user can easily see which packages are seen as part of the system set by running the following {{c|emerge}} command:
+The system packages are defined by the Gentoo profiles (through the <code>packages</code> file). An end-user can easily see which packages are seen as part of the system set through '''emerge''':
+{{RootCmd|emerge -1p @system}}
 
-{{Cmd|emerge --pretend @system}}
-
-== Listing the system set ==
-
-Various tools can be used to list the system set.
-
-=== eix ===
-
-For {{c|[[eix]]}}, issue:
-
-{{Cmd|eix -c --system}}
-
-== See also ==
-
-* {{See also|World set (Portage)}}
-* {{See also|/etc/portage/sets}}
-* {{See also|Selected set (Portage)}}
-* {{See also|Selected-packages_set_(Portage)}}
-
-[[Category:Portage]]
+See also
+* The [[World|world]] package set
